--- a/Landing-page.html
+++ b/Landing-page.html
@@ -79,7 +79,7 @@
                 <div class="bg-white rounded-md">
                     <div class="flex flex-col p-[20px] justify-around">
                         <span class="text-[#2D71B4] font-[600] text-[24px] mb-[44px]">Cek Ongkir</span>
-                        <div class="flex flex-col lg:flex-row xl:flex-row 2xl:flex-row space-x-[18px]">
+                        <div class="flex flex-col md:flex-row lg:flex-row xl:flex-row 2xl:flex-row space-x-[18px]">
                             <input 
                                 type="text" 
                                 name="berat" 
@@ -125,7 +125,7 @@
     </div>
 
     <!-- service/layanan -->
-    <div class="flex flex-col md:flex-row xl:flex-row 2xl:flex-row lg:flex-row mb-[100px] mt-[400px] justify-evenly mx-[80px]">
+    <div class="flex flex-col md:flex-row xl:flex-row 2xl:flex-row lg:flex-row mb-[100px] mt-[200px] lg:mt-[400px] xl:mt-[400px] 2xl:mt-[400px] md:mt-[800px] justify-evenly mx-[80px]">
         <div class="flex flex-col w-[350px]">
             <span class="text-[#2D71B4] text-[30px] 2xl:text-[40px] xl:text-[40px] lg:text-[40px] md:text-[40px] font-[600]">Layanan Kita</span>
             <span class="text-[#5F5F5F] text-[17px] font-[400]">KUY reservasi dan kirim paketmu sekarang juga!</span>
@@ -178,7 +178,7 @@
     </div>
 
     <!-- etalase kuy -->
-    <div class="bg-[#CAFFE9] flex w-full lg:w-[1100px] md:w-[1100px] xl:w-[1200px] 2xl:w-[1200px] items-center rounded-md md:ml-[50px] lg:ml-[80px] flex-col lg:flex-row">
+    <div class="bg-[#CAFFE9] flex w-full md:w-[900px] lg:w-[1100px] md:w-[1100px] xl:w-[1200px] 2xl:w-[1200px] items-center rounded-md md:ml-[20px] lg:ml-[80px] xl:ml-[80px] 2xl:ml-[80px] flex-col lg:flex-row">
         <img src="./assets/people2.png" alt="assets-kuy" class="w-[285px] h-[305px]">
 
         <div class="flex flex-col items-center">
