--- a/banyak pengirim ke satu penerima/data-pengirim.html
+++ b/banyak pengirim ke satu penerima/data-pengirim.html
@@ -77,20 +77,20 @@
 
     
     <div class="flex flex-col justify-center items-center mt-[50px]">
-        <p class="text-[#2D71B4] text-[40px] font-[600] mb-[10px]">Banyak Pengirim ke 1 Penerima</p>   
+        <p class="text-[#2D71B4] text-[28px] md:text-[40px] lg:text-[40px] xl:text-[40px] 2xl:text-[40px] text-center font-[600] mb-[10px]">Banyak Pengirim ke 1 Penerima</p>   
         <hr class="lg:w-[852px] md:w-[752px] w-full border border-[#2D71B4] mb-[10px]">
-        <div class="flex flex-row">
-            <div class="flex bg-[#2D71B4] rounded-3xl text-white p-[6px] mr-[20px] justify-center items-center">
+        <div class="flex flex-col md:flex-row lg:flex-row xl:flex-row 2xl:flex-row">
+            <div class="flex bg-[#2D71B4] rounded-3xl text-white p-[6px] mr-[20px] justify-between items-center mt-2">
                 <p class="mr-[9px] bg-white text-[#2D71B4] py-[5px] px-[14px] rounded-full">1</p>
                 <p class="pr-[9px]">Data Pengirim</p>
             </div>
 
-            <div class="flex bg-[#9B9B9B] rounded-3xl text-white p-[6px] mr-[20px] justify-center items-center">
+            <div class="flex bg-[#9B9B9B] rounded-3xl text-white p-[6px] mr-[20px] justify-between items-center mt-2">
                 <p class="mr-[9px] bg-white text-[#9B9B9B] py-[5px] px-[12px] rounded-full">2</p>
                 <p class="pr-[9px]">Data Penerima</p>
             </div>
 
-            <div class="flex bg-[#9B9B9B] rounded-3xl text-white p-[6px] mr-[20px] justify-center items-center">
+            <div class="flex bg-[#9B9B9B] rounded-3xl text-white p-[6px] mr-[20px] justify-between items-center mt-2">
                 <p class="mr-[9px] bg-white text-[#9B9B9B] py-[5px] px-[12px] rounded-full">3</p>
                 <p class="pr-[9px]">Konfirmasi Pesanan</p>
             </div>
