--- a/1 pengirim ke banyak penerima/konfirmasi-pesanan.html
+++ b/1 pengirim ke banyak penerima/konfirmasi-pesanan.html
@@ -5,6 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
+     <!-- Tailwind elements -->
+     <link
+        href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap"
+        rel="stylesheet" />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css" />
+            <script src="https://cdn.tailwindcss.com/3.3.0"></script>
+            <script>
+                tailwind.config = {
+                    darkMode: "class",
+                    theme: {
+                    },
+                    corePlugins: {
+                    preflight: false,
+                    },
+                };
+            </script>
     <title>Document</title>
 </head>
 <body>
@@ -58,32 +76,32 @@
     </nav>
     
     <div class="flex flex-col justify-center items-center mt-[50px]">
-        <p class="text-[#2D71B4] text-[40px] font-[600] mb-[10px]">1 Pengirim ke Banyak Penerima</p>   
+        <p class="text-[#2D71B4] text-[28px] md:text-[40px] lg:text-[40px] xl:text-[40px] 2xl:text-[40px] font-[600] mb-[10px]">1 Pengirim ke Banyak Penerima</p>   
         <hr class="lg:w-[852px] md:w-[752px] w-full border border-[#2D71B4] mb-[10px]">
-        <div class="flex flex-row">
+        <div class="flex flex-col md:flex-row lg:flex-row xl:flex-row 2xl:flex-row">
             <a href="./data-pengirim.html">
-                <div class="flex bg-[#2D71B4] rounded-3xl text-white p-[6px] mr-[20px] justify-center items-center">
+                <div class="flex bg-[#2D71B4] rounded-3xl text-white p-[6px] mr-[20px] justify-between items-center mt-2">
                     <p class="mr-[9px] bg-white text-[#2D71B4] py-[5px] px-[14px] rounded-full">1</p>
                     <p class="pr-[9px]">Data Pengirim</p>
                 </div>
             </a>
 
             <a href="./data-penerima.html">
-                <div class="flex bg-[#2D71B4] rounded-3xl text-white p-[6px] mr-[20px] justify-center items-center">
+                <div class="flex bg-[#2D71B4] rounded-3xl text-white p-[6px] mr-[20px] justify-between items-center mt-2">
                     <p class="mr-[9px] bg-white text-[#2D71B4] py-[5px] px-[12px] rounded-full">2</p>
                     <p class="pr-[9px]">Data Penerima</p>
                 </div>
             </a>
 
-            <div class="flex bg-[#2D71B4] rounded-3xl text-white p-[6px] mr-[20px] justify-center items-center">
+            <div class="flex bg-[#2D71B4] rounded-3xl text-white p-[6px] mr-[20px] justify-between items-center mt-2">
                 <p class="mr-[9px] bg-white text-[#2D71B4] py-[5px] px-[12px] rounded-full">3</p>
                 <p class="pr-[9px]">Konfirmasi Pesanan</p>
             </div>
         </div>
     </div>
 
-    <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center ">
-        <div class="flex flex-col justify-center bg-white rounded-lg w-[837px] border border-[#E7E7E7]">
+    <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center text-[#000000]">
+        <div class="flex flex-col justify-center bg-white rounded-lg w-[400px] lg:w-[837px] md:w-[837px] xl:w-[837px] 2xl:w-[837px] border border-[#E7E7E7]">
             <div class="bg-[#2D71B4] text-white rounded-t-lg py-[14px] px-[30px]">
                 <p>Konfirmasi Pesanan</p>
             </div>
@@ -98,9 +116,9 @@
                 </div>
             </div>
 
-            <svg xmlns="http://www.w3.org/2000/svg" width="837" height="4" viewBox="0 0 837 4" fill="none">
+            <svg xmlns="http://www.w3.org/2000/svg" class="w-[400px] lg:w-[834px] md:w-[834px] xl:w-[834px] 2xl:w-[834px]" height="4" viewBox="0 0 837 4" fill="none">
                 <path d="M0 2L837 2" stroke="#890000" stroke-width="4" stroke-miterlimit="1.40251" stroke-linecap="round" stroke-linejoin="round" stroke-dasharray="16 16"/>
-            </svg>
+              </svg>
 
             <div class="flex px-[30px] mt-4">
                 <img src="../assets/pengiriman/Pengirim.png" alt="icon-pengirim-kuy" class="w-[30px] h-[30px] mr-[10px]">
@@ -110,26 +128,32 @@
             <p class="text-[16px] font-[600] px-[30px] py-[20px]">Dengan pembayaran lain</p>
 
             <div class=" rounded-lg border border-[#E7E7E7] mx-[30px] my-[20px]">
-                <div class="bg-[#2D71B4] rounded-t-lg px-[30px] py-[10px] ">
-                    <div class="flex bg-white px-[10px] py-[6px] justify-between rounded-lg">
-                        <p>Pilih Metode Pembayaran</p>
+                <div class="bg-[#2D71B4] rounded-t-lg px-[10px] lg:px-[30px] md:px-[30px] xl:px-[30px] 2xl:px-[30px] py-[10px] ">
+                    <div 
+                        type="button"
+                        data-te-toggle="modal"
+                        data-te-target="#modalMetodePembayaran"
+                        data-te-ripple-initclass="flex bg-white px-[10px] py-[6px] justify-between rounded-lg"
+                        class="flex bg-white px-[10px] py-[6px] justify-between rounded-lg cursor-pointer">
+                        <p class="text-[12px] lg:text-[14px] md:text-[14px] xl:text-[14px] 2xl:text-[14px]">Pilih Metode Pembayaran</p>
                         <div class="flex items-center">
-                            <p class="mr-[10px]">Rp. 30.000</p>
+                            <p class="mr-[10px] text-[12px] lg:text-[14px] md:text-[14px] xl:text-[14px] 2xl:text-[14px]">Rp. 30.000</p>
                             <img src="../assets/pengiriman/arrow-black.png" alt="icon-arrow-kuy">
                         </div>
                     </div>
                 </div>
 
-                <div class="px-[30px] pb-[30px]">
+
+                <div class="px-[10px] lg:px-[30px] md:px-[30px] xl:px-[30px] 2xl:px-[30px] pb-[30px]">
                     <div class="flex justify-between h-[75px] items-center border border-[#E7E7E7] rounded-lg mt-[30px]">
                         <div class="flex flex-col p-[10px]">
-                            <p>083272743743 | Friendly</p>
-                            <p class="text-[14px] font-[500]">Jl. Pasteur no.23</p>
+                            <p class="text-[12px] lg:text-[14px] md:text-[14px] xl:text-[14px] 2xl:text-[14px]">083272743743 | Friendly</p>
+                            <p class="text-[12px] lg:text-[14px] md:text-[14px] xl:text-[14px] 2xl:text-[14px] font-[500]">Jl. Pasteur no.23</p>
                         </div>
 
                         <div class="flex flex-col p-[10px]">
-                            <p>Sameday</p>
-                            <p class="text-[14px] font-[500]">14:00   13 Desember</p>
+                            <p class="text-[12px] lg:text-[14px] md:text-[14px] xl:text-[14px] 2xl:text-[14px]">Sameday</p>
+                            <p class="text-[12px] lg:text-[14px] md:text-[14px] xl:text-[14px] 2xl:text-[14px] font-[500]">14:00   13 Desember</p>
                         </div>
 
                         <div class="bg-[#FF0F0F] px-[10px] items-center flex text-white h-[75px] rounded-r-lg cursor-pointer">
@@ -138,12 +162,12 @@
                     </div>
 
                     <div class="flex justify-between mt-[10px]">
-                        <div class="flex">
+                        <div class="flex text-[12px] lg:text-[14px] md:text-[14px] xl:text-[14px] 2xl:text-[14px]">
                             <p class="mr-[20px]">Jarak</p>
                             <p>3KM</p>
                         </div>
 
-                        <div class="flex">
+                        <div class="flex text-[12px] lg:text-[14px] md:text-[14px] xl:text-[14px] 2xl:text-[14px]">
                             <p class="mr-[20px]">Harga</p>
                             <p>Rp. 30.000</p>
                         </div>
@@ -160,8 +184,88 @@
     </div>
 </div>
 
+    <!-- Modal Pilih Metode Pembayaran -->
+    <div
+        data-te-modal-init
+        class="fixed left-0 top-0 z-[1055] hidden h-full w-full overflow-y-auto overflow-x-hidden outline-none"
+        id="modalMetodePembayaran"
+        tabindex="-1"
+        aria-labelledby="exampleModalCenterTitle"
+        aria-modal="true"
+        role="dialog">
+        <div
+            data-te-modal-dialog-ref
+            class="pointer-events-none relative w-auto translate-y-[-50px] opacity-0 transition-all duration-300 ease-in-out min-[576px]:mx-auto min-[576px]:mt-7 min-[576px]:max-w-[500px] min-[992px]:max-w-[800px]">
+        <div
+            class="pointer-events-auto relative flex w-full flex-col rounded-md border-none bg-white bg-clip-padding text-current shadow-lg outline-none dark:bg-neutral-600">
+                <div
+                    class="justify-center flex-shrink-0 items-center rounded-t-md border-b-2 border-neutral-100 border-opacity-100 p-4 dark:border-opacity-50">
+                    <!--Modal title-->
+                    <h5
+                        class="text-[24px] font-[600] text-center"
+                        id="exampleModalScrollableLabel">
+                    Pilih Metode Pembayaran
+                    </h5>
+                </div>
+    
+                <!--Modal body-->
+                <div class="relative p-4 flex flex-col justify-center items-center">
+                    <div class="flex">
+                        <div class="flex border border-[#E7E7E7] rounded-lg py-[10px] px-[16px] text-[#000000] text-[14px] font-[600] hover:border-[#2D71B4] w-[312px]  mr-[50px] w-[312px] items-center">
+                            <input type="radio" name="tunai" id="tunai" class="mr-[10px]">
+                            <img src="../assets/pengiriman/tunai.png" alt="" class="mr-[10px] w-[30px] h-[30px]">
+                            <p>Tunai Penerima</p>
+                        </div>
 
+                        <div class="flex border border-[#E7E7E7] rounded-lg py-[10px] px-[16px] text-[#000000] text-[14px] font-[600] hover:border-[#2D71B4] w-[312px] items-center">
+                            <input type="radio" name="gopay" id="gopay" class="mr-[10px]">
+                            <img src="../assets/pengiriman/gpay.png" alt="" class="mr-[10px] w-[30px] h-[30px]">
+                            <p>Gopay</p>
+                        </div>
+                    </div>
 
+                    <div class="flex mt-[30px]">
+                        <div class="flex border border-[#E7E7E7] rounded-lg py-[10px] px-[16px] text-[#000000] text-[14px] font-[600] hover:border-[#2D71B4] w-[312px]  mr-[50px] items-center">
+                            <input type="radio" name="shopeepay" id="shopeepay" class="mr-[10px]">
+                            <img src="../assets/pengiriman/spay.png" alt="" class="mr-[10px] w-[30px] h-[30px]">
+                            <p>Shopeepay</p>
+                        </div>
+
+                        <div class="flex border border-[#E7E7E7] rounded-lg py-[10px] px-[16px] text-[#000000] text-[14px] font-[600] hover:border-[#2D71B4] w-[312px] items-center">
+                            <input type="radio" name="ovo" id="ovo" class="mr-[10px]">
+                            <img src="../assets/pengiriman/ovo.png" alt="" class="mr-[10px] h-[20.25px] w-[30px]">
+                            <p>Ovo</p>
+                        </div>
+                    </div>
+
+                    <div class="flex mt-[30px]">
+                        <div class="flex border border-[#E7E7E7] rounded-lg py-[10px] px-[16px] text-[#000000] text-[14px] font-[600] hover:border-[#2D71B4] w-[312px]  mr-[50px] items-center">
+                            <input type="radio" name="qris" id="qris" class="mr-[10px]">
+                            <img src="../assets/pengiriman/qris.png" alt="" class="mr-[10px] w-[30px] h-[11.1px]">
+                            <p>Qris</p>
+                        </div>
+
+                        <div class="flex  rounded-lg py-[10px] px-[16px] text-[#000000] text-[14px] font-[600] hover:border-[#2D71B4] w-[312px] h-[50px] items-center">
+
+                        </div>
+                    </div>
+                </div>
+
+                <!--Modal footer-->
+                <div
+                    class="flex flex-shrink-0 flex-wrap items-center justify-end rounded-b-md py-4 mr-12">
+                    <button
+                        type="button"
+                        class="inline-block rounded bg-[#2D71B4] px-6 pb-2 pt-2.5 text-[12px] text-white"
+                        data-te-modal-dismiss
+                        data-te-ripple-init
+                        data-te-ripple-color="light">
+                    Lanjut
+                    </button>
+                </div>
+            </div>
+            </div>
+            </div>  
 <!-- tailwind elements -->
 <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
 </body>
