--- a/banyak pengirim ke satu penerima/konfirmasi-pesanan.html
+++ b/banyak pengirim ke satu penerima/konfirmasi-pesanan.html
@@ -5,25 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
-    <!-- Tailwind elements -->
-    <link
+     <!-- Tailwind elements -->
+     <link
         href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap"
         rel="stylesheet" />
-    <link
-        rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css" />
-        <script src="https://cdn.tailwindcss.com/3.3.0"></script>
-        <script>
-            tailwind.config = {
-                darkMode: "class",
-                theme: {
-                },
-                corePlugins: {
-                preflight: false,
-                },
-            };
-        </script>
-    <link rel="stylesheet" href="style.css">
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css" />
+            <script src="https://cdn.tailwindcss.com/3.3.0"></script>
+            <script>
+                tailwind.config = {
+                    darkMode: "class",
+                    theme: {
+                    },
+                    corePlugins: {
+                    preflight: false,
+                    },
+                };
+            </script>
     <title>Document</title>
 </head>
 <body>
@@ -77,24 +76,24 @@
     </nav>
     
     <div class="flex flex-col justify-center items-center mt-[50px]">
-        <p class="text-[#2D71B4] text-[40px] font-[600] mb-[10px]">Banyak Pengirim ke 1 Penerima</p>   
+        <p class="text-[#2D71B4] text-center text-[28px] md:text-[40px] lg:text-[40px] xl:text-[40px] 2xl:text-[40px] font-[600] mb-[10px]">Banyak Pengirim ke 1 Penerima</p>   
         <hr class="lg:w-[852px] md:w-[752px] w-full border border-[#2D71B4] mb-[10px]">
-        <div class="flex flex-row">
+        <div class="flex flex-col md:flex-row lg:flex-row xl:flex-row 2xl:flex-row">
             <a href="./data-pengirim.html">
-                <div class="flex bg-[#2D71B4] rounded-3xl text-white p-[6px] mr-[20px] justify-center items-center">
+                <div class="flex bg-[#2D71B4] rounded-3xl text-white p-[6px] mr-[20px] justify-between items-center mt-2">
                     <p class="mr-[9px] bg-white text-[#2D71B4] py-[5px] px-[14px] rounded-full">1</p>
                     <p class="pr-[9px]">Data Pengirim</p>
                 </div>
             </a>
 
             <a href="./data-penerima.html">
-                <div class="flex bg-[#2D71B4] rounded-3xl text-white p-[6px] mr-[20px] justify-center items-center">
+                <div class="flex bg-[#2D71B4] rounded-3xl text-white p-[6px] mr-[20px] justify-between items-center mt-2">
                     <p class="mr-[9px] bg-white text-[#2D71B4] py-[5px] px-[12px] rounded-full">2</p>
                     <p class="pr-[9px]">Data Penerima</p>
                 </div>
             </a>
 
-            <div class="flex bg-[#2D71B4] rounded-3xl text-white p-[6px] mr-[20px] justify-center items-center">
+            <div class="flex bg-[#2D71B4] rounded-3xl text-white p-[6px] mr-[20px] justify-between items-center mt-2">
                 <p class="mr-[9px] bg-white text-[#2D71B4] py-[5px] px-[12px] rounded-full">3</p>
                 <p class="pr-[9px]">Konfirmasi Pesanan</p>
             </div>
@@ -102,58 +101,59 @@
     </div>
 
     <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center text-[#000000]">
-        <div class="flex flex-col justify-center bg-white rounded-lg w-[837px] border border-[#E7E7E7]">
+        <div class="flex flex-col justify-center bg-white rounded-lg w-[400px] lg:w-[837px] md:w-[837px] xl:w-[837px] 2xl:w-[837px] border border-[#E7E7E7]">
             <div class="bg-[#2D71B4] text-white rounded-t-lg py-[14px] px-[30px]">
                 <p>Konfirmasi Pesanan</p>
             </div>
 
-            <div class="flex px-[30px] py-[20px] justify-start">
-                <img src="../assets/pengiriman/Penerima.png" alt="icon-penerima-kuy" class="w-[30px] h-[30px] mr-[10px]">
+            <div class="flex px-[30px] py-[20px]">
+                <img src="../assets/pengiriman/Pengirim.png" alt="icon-penerima-kuy" class="w-[30px] h-[30px] mr-[10px]">
 
                 <div class="flex flex-col ">
-                    <p class="text-[20px] font-[600]">Penerima</p>
+                    <p class="text-[20px] font-[600]">Pengirim</p>
                     <p class="text-[#585858] text-[12px]">083272743743 | Friendly</p>
                     <p class="text-[#585858] text-[12px]">Jl. Pasteur no.23</p>
                 </div>
             </div>
 
-            <svg xmlns="http://www.w3.org/2000/svg" width="837" height="4" viewBox="0 0 837 4" fill="none">
+            <svg xmlns="http://www.w3.org/2000/svg" class="w-[400px] lg:w-[834px] md:w-[834px] xl:w-[834px] 2xl:w-[834px]" height="4" viewBox="0 0 837 4" fill="none">
                 <path d="M0 2L837 2" stroke="#890000" stroke-width="4" stroke-miterlimit="1.40251" stroke-linecap="round" stroke-linejoin="round" stroke-dasharray="16 16"/>
               </svg>
 
             <div class="flex px-[30px] mt-4">
-                <img src="../assets/pengiriman/Pengirim.png" alt="icon-pengirim-kuy" class="w-[30px] h-[30px] mr-[10px]">
-                <p class="text-[20px] font-[600]">Detail Pengirim</p>
+                <img src="../assets/pengiriman/Penerima.png" alt="icon-pengirim-kuy" class="w-[30px] h-[30px] mr-[10px]">
+                <p class="text-[20px] font-[600]">Detail Penerima</p>
             </div>
 
             <p class="text-[16px] font-[600] px-[30px] py-[20px]">Dengan pembayaran lain</p>
 
             <div class=" rounded-lg border border-[#E7E7E7] mx-[30px] my-[20px]">
-                <div class="bg-[#2D71B4] rounded-t-lg px-[30px] py-[10px] ">
+                <div class="bg-[#2D71B4] rounded-t-lg px-[10px] lg:px-[30px] md:px-[30px] xl:px-[30px] 2xl:px-[30px] py-[10px] ">
                     <div 
                         type="button"
                         data-te-toggle="modal"
                         data-te-target="#modalMetodePembayaran"
                         data-te-ripple-initclass="flex bg-white px-[10px] py-[6px] justify-between rounded-lg"
                         class="flex bg-white px-[10px] py-[6px] justify-between rounded-lg cursor-pointer">
-                        <p>Pilih Metode Pembayaran</p>
+                        <p class="text-[12px] lg:text-[14px] md:text-[14px] xl:text-[14px] 2xl:text-[14px]">Pilih Metode Pembayaran</p>
                         <div class="flex items-center">
-                            <p class="mr-[10px]">Rp. 30.000</p>
+                            <p class="mr-[10px] text-[12px] lg:text-[14px] md:text-[14px] xl:text-[14px] 2xl:text-[14px]">Rp. 30.000</p>
                             <img src="../assets/pengiriman/arrow-black.png" alt="icon-arrow-kuy">
                         </div>
                     </div>
                 </div>
 
-                <div class="px-[30px] pb-[30px]">
+
+                <div class="px-[10px] lg:px-[30px] md:px-[30px] xl:px-[30px] 2xl:px-[30px] pb-[30px]">
                     <div class="flex justify-between h-[75px] items-center border border-[#E7E7E7] rounded-lg mt-[30px]">
                         <div class="flex flex-col p-[10px]">
-                            <p>083272743743 | Friendly</p>
-                            <p class="text-[14px] font-[500]">Jl. Pasteur no.23</p>
+                            <p class="text-[12px] lg:text-[14px] md:text-[14px] xl:text-[14px] 2xl:text-[14px]">083272743743 | Friendly</p>
+                            <p class="text-[12px] lg:text-[14px] md:text-[14px] xl:text-[14px] 2xl:text-[14px] font-[500]">Jl. Pasteur no.23</p>
                         </div>
 
                         <div class="flex flex-col p-[10px]">
-                            <p>Sameday</p>
-                            <p class="text-[14px] font-[500]">14:00   13 Desember</p>
+                            <p class="text-[12px] lg:text-[14px] md:text-[14px] xl:text-[14px] 2xl:text-[14px]">Sameday</p>
+                            <p class="text-[12px] lg:text-[14px] md:text-[14px] xl:text-[14px] 2xl:text-[14px] font-[500]">14:00   13 Desember</p>
                         </div>
 
                         <div class="bg-[#FF0F0F] px-[10px] items-center flex text-white h-[75px] rounded-r-lg cursor-pointer">
@@ -162,12 +162,12 @@
                     </div>
 
                     <div class="flex justify-between mt-[10px]">
-                        <div class="flex">
+                        <div class="flex text-[12px] lg:text-[14px] md:text-[14px] xl:text-[14px] 2xl:text-[14px]">
                             <p class="mr-[20px]">Jarak</p>
                             <p>3KM</p>
                         </div>
 
-                        <div class="flex">
+                        <div class="flex text-[12px] lg:text-[14px] md:text-[14px] xl:text-[14px] 2xl:text-[14px]">
                             <p class="mr-[20px]">Harga</p>
                             <p>Rp. 30.000</p>
                         </div>
@@ -182,6 +182,7 @@
             </div>
         </div>
     </div>
+</div>
 
     <!-- Modal Pilih Metode Pembayaran -->
     <div
@@ -264,11 +265,7 @@
                 </div>
             </div>
             </div>
-    </div>  
-    </div>
-    </div>
-</div>
-
+            </div>  
 <!-- tailwind elements -->
 <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
 </body>
