--- a/Cakupan-wilayah.html
+++ b/Cakupan-wilayah.html
@@ -86,14 +86,14 @@
         </div>
     </div>
 
-    <div class="flex flex-col w-[1100px] pb-[200px] lg:ml-[70px] p-6 lg:p-0 md:p-0 pl-[40px] md:pl-0 lg:pl-0">
+    <div class="flex flex-col w-[400px] lg:w-[1100px] md:w-[1100px] xl:w-[1100px] 2xl:w-[1100px] pb-[200px] lg:ml-[70px] p-4 lg:p-0 md:p-0 pl-[40px] md:pl-0 xl:pl-0">
         <div class="">
             <p class="text-[#2D71B4] text-[30px] lg:text-[40px] md:text-[40px] font-[600]">Jangkauan Tiketux KUY</p>
-            <p class="text-[#5F5F5F] text-[16px] font-[400] w-[350px] lg:w-full md:w-full text-justify">Saat ini pengiriman Tiketux Kuy sudah menjangkau total 51 kecamatan se Bandung Raya meliputi kecamatan di Kabupaten Bandung - Kabupaten Bandung Barat - Kota Bandung - Kota Cimahi. Cek daftar jangkauan pengiriman Tiketux Kuy di bawah ini sebelum kirim paket:</p>
+            <p class="text-[#5F5F5F] text-[16px] font-[400] w-[320px] lg:w-full md:w-full text-justify">Saat ini pengiriman Tiketux Kuy sudah menjangkau total 51 kecamatan se Bandung Raya meliputi kecamatan di Kabupaten Bandung - Kabupaten Bandung Barat - Kota Bandung - Kota Cimahi. Cek daftar jangkauan pengiriman Tiketux Kuy di bawah ini sebelum kirim paket:</p>
         </div>
 
         <div class="flex flex-col lg:flex-row mt-[30px] mb-[50px]">
-            <div class="flex flex-col w-[347px] mr-[65px] mb-4">
+            <div class="flex flex-col w-[280px] lg:w-[347px] md:w-[347px] xl:w-[347px] 2xl:w-[347px] mr-[65px] mb-4">
                 <a href="./Pilih-jenis-pengiriman.html" class="bg-[#2D71B4] text-white rounded-md py-[12px] mb-[14px] text-center">
                     <button class="">Reservasi Sekarang</button>
                 </a>
@@ -102,7 +102,7 @@
             </div>
 
             <div class="tabel w-[100%]">
-                <table class="border-collapse border border-[#C2C2C2] p-2 p-2 w-[380px] lg:w-[804px] md:w-[804px]">
+                <table class="border-collapse border border-[#C2C2C2] p-2 p-2 w-[320px] lg:w-[804px] md:w-[804px]">
                     <thead class="w-[402px]">
                         <tr>
                             <th class="border border-[#C2C2C2] p-2 p-2">Kabupaten/Kota</th>
@@ -152,7 +152,7 @@
         </div>
 
         <div class="mb-10">
-            <p class="text-[#5F5F5F] text-[16px] font-[400] w-[350px] lg:w-full md:w-full text-justify">Nah, selain daerah-daerah yang disebutkan di atas, kamu juga bisa cek keterjangkauan pengiriman Tiketux Kuy di halaman ini, scroll ke bawah sampai menu 'Cakupan Wilayan Pengiriman'. Saatnya kirim barang dan makanan lebih hemat pakai Tiketux Kuy! Ongkir FLAT sampai dengan 3kg se Bandung Raya.</p>
+            <p class="text-[#5F5F5F] text-[16px] font-[400] w-[320px] lg:w-full md:w-full text-justify">Nah, selain daerah-daerah yang disebutkan di atas, kamu juga bisa cek keterjangkauan pengiriman Tiketux Kuy di halaman ini, scroll ke bawah sampai menu 'Cakupan Wilayan Pengiriman'. Saatnya kirim barang dan makanan lebih hemat pakai Tiketux Kuy! Ongkir FLAT sampai dengan 3kg se Bandung Raya.</p>
         </div>
     </div>
 
