--- a/1 pengirim 1 penerima/1pengirim-1penerima.html
+++ b/1 pengirim 1 penerima/1pengirim-1penerima.html
@@ -27,7 +27,6 @@
 </head>
 <body>
 <div class="bg-[#F7F7F8]">
-    <!-- navbar -->    
     <nav class="bg-white border-gray-200">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-evenly mx-auto p-4">
             <div class="hidden w-full md:block md:w-auto" id="navbar-default">
@@ -68,13 +67,12 @@
                     </a>
                 </div>
 
-                <a href="./Login.html" class="rounded-md text-[#2D71B4] border border-[#2D71B4] items-center py-[6px] px-[16px]">
+                <a href="../Login.html" class="rounded-md text-[#2D71B4] border border-[#2D71B4] items-center py-[6px] px-[16px]">
                     Login
                 </a>
             </div>
         </div>
     </nav>
-
     
     <div class="flex flex-col justify-center items-center mt-[50px]">
         <p class="text-[#2D71B4] text-[28px] md:text-[40px] lg:text-[40px] xl:text-[40px] 2xl:text-[40px] font-[600] mb-[10px] text-center">1 Pengirim ke 1 Penerima</p>   
