--- a/banyak pengirim ke satu penerima/data-penerima.html
+++ b/banyak pengirim ke satu penerima/data-penerima.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
-    <!-- Tailwind elements -->
     <link
         href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap"
         rel="stylesheet" />
@@ -27,7 +26,7 @@
 </head>
 <body>
 <div class="bg-[#F7F7F8]">
-    <!-- navbar -->    
+ 
     <nav class="bg-white border-gray-200">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-evenly mx-auto p-4">
             <div class="hidden w-full md:block md:w-auto" id="navbar-default">
@@ -68,13 +67,12 @@
                     </a>
                 </div>
 
-                <a href="./Login.html" class="rounded-md text-[#2D71B4] border border-[#2D71B4] items-center py-[6px] px-[16px]">
+                <a href="../Login.html" class="rounded-md text-[#2D71B4] border border-[#2D71B4] items-center py-[6px] px-[16px]">
                     Login
                 </a>
             </div>
         </div>
     </nav>
-
     
     <div class="flex flex-col justify-center items-center mt-[50px]">
         <p class="text-[#2D71B4] text-[28px] md:text-[40px] lg:text-[40px] xl:text-[40px] 2xl:text-[40px] font-[600] mb-[10px] text-center">Banyak Pengirim ke 1 Penerima</p>   
@@ -99,7 +97,7 @@
         </div>
     </div>
 
-    <!-- card -->
+
     <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center rounded-md text-[#000000]">
         <div class="flex flex-col justify-center bg-white p-[30px] rounded-lg">
             <div class="flex mb-[10px]">
@@ -295,7 +293,6 @@
 </div>
 </div>
 
-<!-- tailwind elements -->
 <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
 </body>
 </html>
