--- a/banyak pengirim ke satu penerima/data-pengirim.html
+++ b/banyak pengirim ke satu penerima/data-pengirim.html
@@ -27,7 +27,6 @@
 </head>
 <body>
 <div class="bg-[#F7F7F8]">
-    <!-- navbar -->    
     <nav class="bg-white border-gray-200">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-evenly mx-auto p-4">
             <div class="hidden w-full md:block md:w-auto" id="navbar-default">
@@ -68,7 +67,7 @@
                     </a>
                 </div>
 
-                <a href="./Login.html" class="rounded-md text-[#2D71B4] border border-[#2D71B4] items-center py-[6px] px-[16px]">
+                <a href="../Login.html" class="rounded-md text-[#2D71B4] border border-[#2D71B4] items-center py-[6px] px-[16px]">
                     Login
                 </a>
             </div>
