--- a/Landing-page.html
+++ b/Landing-page.html
@@ -64,10 +64,10 @@
                     <span class="text-[#2D71B4] font-[600] text-[16px] lg:text-[24px] md:text-[24px] xl:text-[24px] 2xl:text-[24px]">Lacak Paket Kuy</span>
                     <div class="flex flex-col ">
                         <label for="kodeResi" class="font-[600] my-[10px] text-[14px]">Kode Resi :</label>
-                        <textarea type="text" class="border border-[#606060] rounded-md placeholder:text-[12px] lg:placeholder:text-[16px] md:placeholder:text-[16px] xl:placeholder:text-[16px] 2xl:placeholder:text-[16px]" placeholder="Masukan Kode Resi, contoh: xxxxxxx , xxxxxxx , xxxxxxx" rows="4" cols="50"></textarea>
+                        <textarea type="text" class="border border-[#606060] resize-none rounded-md placeholder:text-[12px] lg:placeholder:text-[16px] md:placeholder:text-[16px] xl:placeholder:text-[16px] 2xl:placeholder:text-[16px]" placeholder="Masukan Kode Resi, contoh: xxxxxxx , xxxxxxx , xxxxxxx" rows="4" cols="50"></textarea>
                         <span class="text-[#5F5F5F] font-[500] text-[10px] lg:text-[12px] md:text-[12px] xl:text-[12px] 2xl:text-[12px] mb-[25px] mt-2">*Kamu dapat memasukkan kode resi hinga 20 kode</span>
     
-                        <button class="bg-[#2D71B4] text-white font-[600] text-[14px] lg:text-[16px] md:text-[16px] xl:text-[16px] 2xl:text-[16px] py-[12px] lg:mt-[24px] xl:mt-[24px] md:mt-[24px] 2xl:mt-[24px] rounded-md">Lacak Paket</button>
+                        <button class="bg-[#2D71B4] text-white font-[600] text-[14px] lg:text-[16px] md:text-[16px] xl:text-[16px] 2xl:text-[16px] py-[12px] lg:mt-[54px] xl:mt-[54px] md:mt-[24px] 2xl:mt-[24px] rounded-md">Lacak Paket</button>
                     </div>
                 </div>
             </div>
@@ -153,7 +153,7 @@
                         <span class="text-[#4E4E4E] text-[30px] font-[600] mb-[12px]">Nextday</span>
                     </div>
                     <span class="text-[#5F5F5F] text-[16px] font-[400] mb-[12px]">Kirim barang hari ini sampai esok hari</span>
-                    <span class="text-[#5F5F5F] text-[16px] font-[500]">Mulai dari</span>
+                    <span class="text-[#5F5F5F] text-[16px] font-[500] pt-[20px]">Mulai dari</span>
                     <span class="text-[#3375B8] text-[35px] font-[700]">Rp. 8.000 <a class="text-[24px] text-[#B83333]">/</a> <a class="text-[24px] text-[#B83333] line-through">10.000 </a></span>
                 </div>
             </div>
@@ -253,8 +253,8 @@
             <div class="mr-[48px] mb-4">
                 <img src="./assets/etalase.jpeg" alt="etalase-kuy" class="h-[16.462rem] md:h-[22.462rem] lg:h-[22.462rem] w-[33.12rem]">
                 <p class="text-[#5F5F5F] text-[16px] py-[10px]">12 Desember 2023</p>
-                <p class="text-[#4E4E4E] text-[30px] font-[600] lg:mb-[17.2px] md:mb-[17.2px] xl:mb-[17.2px] 2xl:mb-[17.2px]">CikutraOlshop</p>
-                <p class="text-[#5F5F5F] font-[400] text-[18px] max-w-[530px] mb-4">Macam macam kaos polos dewasa , bikin style kmau makin kece beuuddd</p>
+                <p class="text-[#4E4E4E] text-[30px] font-[600] lg:mb-[17.2px] md:mb-[17.2px] xl:mb-[17.2px] 2xl:mb-[17.2px] mt-[12px]">CikutraOlshop</p>
+                <p class="text-[#5F5F5F] font-[400] text-[18px] max-w-[530px] mb-4 mt-[10px]">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum vitae consequatur in dolore et omnis distinctio. Minima ipsum amet voluptas.</p>
             </div>
     
             <div class="flex flex-col ">
