--- a/1 pengirim 1 penerima/1pengirim-1penerima.html
+++ b/1 pengirim 1 penerima/1pengirim-1penerima.html
@@ -104,7 +104,7 @@
                 <p class="text-[24px] font-[600] ml-[10px] ">Detail Pengirim</p>
             </div>
 
-            <div class="flex mb-[10px] ml-[55px] lg:ml-1 md:ml-1">
+            <div class="flex mb-[10px] ml-[55px] lg:ml-0 md:ml-0">
                 <p class="mr-[10px]">Pemesan adalah Pengirim</p>
                 <div class="relative inline-block w-10 mr-2 align-middle select-none transition duration-200 ease-in h-6">
                     <input type="checkbox" name="toggle" id="toggle" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"/>
@@ -195,8 +195,8 @@
                 </div>
 
                 <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px]">
-                    <label for="patokan" class="mt-[20px]">Patokan</label>
-                    <input type="text" name="patokan" id="patokan" placeholder="Opsional" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
+                    <label for="patokan" class="mt-[20px]">Berat Barang (KG)</label>
+                    <input type="text" name="patokan" id="patokan" placeholder="Berat (KG)" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
             </div>
 
