--- a/1 pengirim 1 penerima/data-penerima.html
+++ b/1 pengirim 1 penerima/data-penerima.html
@@ -120,7 +120,7 @@
                 </div>
                 <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px]">
                     <label for="namaPenerima">Nama Penerima</label>
-                    <input type="text" name="namaPenerima" id="namaPenerima" placeholder="08xxxxx" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
+                    <input type="text" name="namaPenerima" id="namaPenerima" placeholder="Isi Nama" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
             </div>
 
