--- a/Landing-page.html
+++ b/Landing-page.html
@@ -59,15 +59,15 @@
         <img src="./assets/hero.jpeg" alt="hero-image-kuy" class="relative bg-cover w-screen" class="w-full">
         <div class="flex flex-col lg:flex-row xl:flex-row 2xl:flex-row lg:absolute md:absolute xl:absolute 2xl:absolute md:top-[450px] xl:top-[550px] 2xl:top-[550px] lg:top-[550px] mx-auto lacak">
             <!-- lacak paket -->
-            <div class="bg-white rounded-md w-[350px] lg:w-[373px] md:w-full mb-[15px] h-[300px] md:h-[341px] lg:h-[341px] xl:h-[341px] 2xl:h-[341px] lg:mr-[20px] md:mr-[20px] xl:mr-[20px] 2xl:mr-[20px]">
+            <div class="bg-white rounded-md w-[350px] lg:w-[373px] md:w-full mb-[15px] h-[300px] md:h-[368px] lg:h-[368px] xl:h-[368px] 2xl:h-[368px] lg:mr-[20px] md:mr-[20px] xl:mr-[20px] 2xl:mr-[20px]">
                 <div class="p-[20px] w-full">
                     <span class="text-[#2D71B4] font-[600] text-[16px] lg:text-[24px] md:text-[24px] xl:text-[24px] 2xl:text-[24px]">Lacak Paket Kuy</span>
                     <div class="flex flex-col ">
                         <label for="kodeResi" class="font-[600] my-[10px] text-[14px]">Kode Resi :</label>
                         <textarea type="text" class="border border-[#606060] resize-none rounded-md placeholder:text-[12px] lg:placeholder:text-[16px] md:placeholder:text-[16px] xl:placeholder:text-[16px] 2xl:placeholder:text-[16px]" placeholder="Masukan Kode Resi, contoh: xxxxxxx , xxxxxxx , xxxxxxx" rows="4" cols="50"></textarea>
-                        <span class="text-[#5F5F5F] font-[500] text-[10px] lg:text-[12px] md:text-[12px] xl:text-[12px] 2xl:text-[12px] mb-[25px] mt-2">*Kamu dapat memasukkan kode resi hinga 20 kode</span>
+                        <span class="text-[#5F5F5F] font-[500] text-[10px] lg:text-[12px] md:text-[12px] xl:text-[12px] 2xl:text-[12px] mb-[25px] mt-2 pb-[50px]">*Kamu dapat memasukkan kode resi hinga 20 kode</span>
     
-                        <button class="bg-[#2D71B4] text-white font-[600] text-[14px] lg:text-[16px] md:text-[16px] xl:text-[16px] 2xl:text-[16px] py-[12px] lg:mt-[54px] xl:mt-[54px] md:mt-[24px] 2xl:mt-[24px] rounded-md">Lacak Paket</button>
+                        <button class="bg-[#2D71B4] text-white font-[600] text-[14px] lg:text-[16px] md:text-[16px] xl:text-[16px] 2xl:text-[16px] py-[12px] rounded-md">Lacak Paket</button>
                     </div>
                 </div>
             </div>
