--- a/1 pengirim ke banyak penerima/data-penerima.html
+++ b/1 pengirim ke banyak penerima/data-penerima.html
@@ -103,12 +103,12 @@
     <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center rounded-md text-[#000000]">
         <div class="flex flex-col justify-center bg-white p-[30px] rounded-lg">
             <div class="flex mb-[10px] ml-[55px] lg:ml-1 md:ml-1 xl:ml-1 2xl:ml-1">
-                <img src="../assets/pengiriman/Pengirim.png" alt="icon-pengirim-kuy" class="w-[36px] h-[36px]">
-                <p class="text-[24px] font-[600] ml-[10px] ">Detail Pengirim</p>
+                <img src="../assets/pengiriman/Penerima.png" alt="icon-pengirim-kuy" class="w-[36px] h-[36px]">
+                <p class="text-[24px] font-[600] ml-[10px] ">Detail Penerima</p>
             </div>
 
             <div class="flex mb-[10px] ml-[55px] lg:ml-1 md:ml-1 xl:ml-1 2xl:ml-1">
-                <p class="mr-[10px]">Pemesan adalah Pengirim</p>
+                <p class="mr-[10px]">Pemesan adalah Penerima</p>
                 <div class="relative inline-block w-10 mr-2 align-middle select-none transition duration-200 ease-in h-6">
                     <input type="checkbox" name="toggle" id="toggle" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"/>
                     <label for="toggle" class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"></label>
@@ -117,12 +117,12 @@
 
             <div class="flex flex-wrap justify-center items-center">
                 <div class="flex flex-col w-[343px]">
-                    <label for="teleponPengirim">No Telepon Pengirim</label>
-                    <input type="text" name="teleponPengirim" id="teleponPengirim" placeholder="08xxxxx" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
+                    <label for="teleponPenerima">No Telepon Penerima</label>
+                    <input type="text" name="teleponPenerima" id="teleponPenerima" placeholder="08xxxxx" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
                 <div class="flex flex-col w-[343px] lg:ml-[20px] xl:ml-[20px] 2xl:ml-[20px] md:ml-[15px]">
-                    <label for="namaPengirim">Nama Pengirim</label>
-                    <input type="text" name="namaPengirim" id="namaPengirim" placeholder="Isi Nama" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
+                    <label for="namaPenerima">Nama Penerima</label>
+                    <input type="text" name="namaPenerima" id="namaPenerima" placeholder="Isi Nama" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
             </div>
 
@@ -142,7 +142,7 @@
                     <input type="text" name="alamatPenerima" id="alamatPenerima" class="h-[66px] border border-[#E7E7E7] rounded-md mt-2 px-[10px] py-[5px] " placeholder="Nama Kota, Jalan">
                 </div>
                 <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px] xl:ml-[20px] 2xl:ml-[20px]">
-                    <label for="patokan" class="mt-[20px]">Patokan</label>
+                    <label for="patokan" class="">Patokan</label>
                     <input type="text" name="patokan" id="patokan" placeholder="Opsional" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
             </div>
