--- a/1 pengirim ke banyak penerima/data-pengirim.html
+++ b/1 pengirim ke banyak penerima/data-pengirim.html
@@ -101,12 +101,12 @@
     <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center rounded-md text-[#000000]">
         <div class="flex flex-col justify-center bg-white p-[30px] rounded-lg">
             <div class="flex mb-[10px]">
-                <img src="../assets/pengiriman/Penerima.png" alt="icon-penerima-kuy" class="w-[35px] h-[35px]">
-                <p class="text-[24px] font-[600] ml-[10px] ">Detail Penerima</p>
+                <img src="../assets/pengiriman/Pengirim.png" alt="icon-penerima-kuy" class="w-[35px] h-[35px]">
+                <p class="text-[24px] font-[600] ml-[10px] ">Detail Pengirim</p>
             </div>
 
             <div class="flex mb-[10px]">
-                <p class="mr-[10px]">Pemesan adalah Penerima</p>
+                <p class="mr-[10px]">Pemesan adalah Pengirim</p>
                 <div class="relative inline-block w-10 mr-2 align-middle select-none transition duration-200 ease-in h-6">
                     <input type="checkbox" name="toggle" id="toggle" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"/>
                     <label for="toggle" class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"></label>
@@ -115,19 +115,19 @@
 
             <div class="flex flex-wrap">
                 <div class="flex flex-col w-[343px]">
-                    <label for="teleponPenerima">Nomor Telepon Penerima</label>
-                    <input type="text" name="teleponPenerima" id="teleponPenerima" placeholder="08xxxxx" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
+                    <label for="teleponPengirim">Nomor Telepon Pengirim</label>
+                    <input type="text" name="teleponPengirim" id="teleponPengirim" placeholder="08xxxxx" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
                 <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px]">
-                    <label for="namaPenerima">Nama Penerima</label>
-                    <input type="text" name="namaPenerima" id="namaPenerima" placeholder="08xxxxx" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
+                    <label for="namaPengirim">Nama Pengirim</label>
+                    <input type="text" name="namaPengirim" id="namaPengirim" placeholder="08xxxxx" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
             </div>
 
             <div class="flex mt-[20px] flex-wrap">
                 <div class="flex flex-col w-[343px]">
                     <div class="flex justify-between">
-                        <label for="alamatPenerima">Alamat</label>
+                        <label for="alamatPengirim">Alamat</label>
                         <a  
                             class="cursor-pointer"
                             type="button"
@@ -137,7 +137,7 @@
                             <p class="text-[#2D71B4] text-[12px] font-[500]">Alamat Tersimpan</p>
                         </a>
                     </div>
-                    <input type="text" name="alamatPenerima" id="alamatPenerima" class="h-[66px] border border-[#E7E7E7] rounded-md mt-2 px-[10px] py-[5px] " placeholder="Nama Kota, Jalan">
+                    <input type="text" name="alamatPengirim" id="alamatPengirim" class="h-[66px] border border-[#E7E7E7] rounded-md mt-2 px-[10px] py-[5px] " placeholder="Nama Kota, Jalan">
                 </div>
                 <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px]">
                     <label for="namaPenerima">Patokan</label>
